Update locales, dependencies, fix tests, fix small bugs, new view for stream metadata history

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -6,34 +6,33 @@ trendingStations=Trending
 copy=Copy
 show=Show
 exit=Quit
-copy.stream.url=Copy Stream URL
+copy.streamUrl=Copy Stream URL
 copy.nowPlaying=Copy track name
 close=Close
 cancel=Cancel
 save=Save
 open=Open
-search=Search
+search.prompt=Search
 loading=Loading...
 countries=Browse countries
 library=Library
 station=station
 stations=stations
 unknown=Unknown
-connectionError=Can't connect to the server.
-connectionErrorDesc=Please check your internet connection and click here to try again.
+connectionError.title=Can't connect to the server.
+connectionError.description=Please check your internet connection and click here to try again.
 noResults=No stations were found
-searchingLibrary=Searching Radio Directory
-searchingLibraryDesc=Start by typing at least 3 characters to the search field
+search.empty.title=Searching Radio Directory
+search.empty.description=Start by typing at least 3 characters to the search field
 field.max.length=The field is too long
-field.min.length=The field is too short
 field.invalid.length=The field is too short or too long
 field.invalid.country=This country is invalid
 field.invalid.url=This is not a valid URL address
 player.streamingStopped=Streaming stopped
 player.streamingError=Streaming error
 player.streamError=Error opening {0}. See app.log for details.
-player.noMetaData=Unknown track
-player.vlc.missing=VLC Player is not installed!
+player.unknownTrack=Unknown track
+player.vlc.missing.title=VLC Player is not installed!
 player.vlc.missing.description=The app will try to use different player. For the best listening experience, \
   we recommend that you install VLC player on your system!
 menu.station.add=New Station
@@ -41,43 +40,35 @@ menu.station.favourite=Add To Favourites
 menu.station.favouriteRemove=Remove from Favourites
 menu.station.favourite.clear=Clear Favourites...
 menu.station.vote=Vote for station
-menu.stream=Open Stream URL...
-menu.stream.title=Open Stream
-menu.stream.url=URL:
-menu.stream.stationName=Custom Stream
-menu.stream.stationTag=Custom Stream URL
+menu.openStream=Open Stream URL...
+openStream.title=Open Stream
+openStream.url=URL:
+openStream.stationName=Custom Stream
 menu.file=_File
-menu.station.info=Show Station Details
 menu.help=_Help
 menu.help.clearCache=Clear Image Cache
 menu.help.stats=Show API Statistics
 menu.help.openWebsite=Visit App Website
-menu.help.logs=Open Logs Folder
-menu.help.loglevel=Change Log Level
-menu.help.loglevel.off=Off
-menu.help.loglevel.info=Info
-menu.help.loglevel.debug=Debug
-menu.history=_History
-menu.history.show=Show History
-menu.history.recent=Recently Listened
-menu.history.clear=Clear History...
-history.clear.confirm=Do you want to clear the history?
-history.clear.text=This operation will remove {0} items saved in your history and cannot be undone.
+menu.help.openLogs=Open Logs Folder
+menu.help.log.title=Change Log Level
+menu.help.log.off=Off
+menu.help.log.info=Info
+menu.help.log.debug=Debug
 menu.preferences=Preferences...
-app.preferences=Preferences
-app.appearance=App Appearance
-app.useSystemColor=Use system accent color:
-app.accentColor=Accent color:
-app.darkMode=App Theme
-app.trayIcon=System Tray Icon
+preferences.title=Preferences
+preferences.appearance=App Appearance
+preferences.accentColor.system=Use system accent color:
+preferences.accentColor=Accent color:
+preferences.theme.title=App Theme
+app.trayIcon.title=System Tray Icon
 app.trayIcon.enable=Enable Tray Icon:
 menu.app.quit=Quit
 menu.app.about=About
 menu.app.attributions=Attributions
-menu.app.server=Change API server
-menu.app.darkMode=Select App Theme:
-menu.app.dark=Dark
-menu.app.light=Light
+preferences.servers.title=Change API server
+preferences.theme.select=Select App Theme:
+preferences.theme.dark=Dark
+preferences.theme.light=Light
 menu.app.system=System
 menu.player.controls=_Playback
 menu.player.stop=Stop
@@ -87,29 +78,29 @@ menu.player.animate=Show Animated Track Name
 menu.favourites=_Favourites
 menu.favourites.show=Show Favourites
 menu.favourites.all=All Favourites
-cache.clear.confirm=Do you want to clear image cache?
+cache.clear.title=Do you want to clear image cache?
 cache.clear.ok=Cache cleared successfully.
 cache.clear.error=There was an error when clearing cache.
-cache.clear.text=This action will free {0} MB of stored images of radio stations. This action cannot be undone.
+cache.clear.description=This action will free {0} MB of stored images of radio stations. This action cannot be undone.
 vote.ok=Your vote has been successfully added!
 vote.error=You can't vote for this station right now. Try again soon!
 macos.menu.window=_Window
-database.clear.confirm=Do you want to clear favourites?
-database.clear.text=This operation will remove all your saved favourite stations and cannot be undone.
-Search=Showing results for
+database.clear.title=Do you want to clear favourites?
+database.clear.description=This operation will remove all your saved favourite stations and cannot be undone.
+search.results=Showing results for
 search.byName=By Name
 search.byTag=By Tag
 stats.statsUnavailable=Stats are not available at the moment.
 stats.status=Status
-stats.software_version=API Version
+stats.softwareVersion=API Version
 stats.stations=Stations
-stats.stations_broken=Broken stations
+stats.stationsBroken=Broken stations
 stats.tags=Tags
 stats.title=API Statistics
 stats.countries=Countries
 stats.languages=Languages
-stats.clicks_last_hour=Clicks for last hour
-stats.clicks_last_day=Clicks for last day
+stats.clicksLastHour=Clicks for last hour
+stats.clicksLastDay=Clicks for last day
 add.title=Add new station
 add.name=Name
 add.site=Website
@@ -131,20 +122,30 @@ info.clickTrend=Station Popularity
 info.clickCount=Clicks
 info.tags=Tags
 info.state=State
-info.visit.website=Visit website
+info.visitWebsite=Visit website
 attributions.title=Third Party software used by
 attributions.name=Name
 attributions.version=Version
-servers.selected=Selected server:
-servers.error=Error when getting servers:\n
-servers.notAvailable=No available servers right now. Click to Try again.
-servers.restartNeeded=Selected server will be applied after restart of the app.
-about.datasource=Stations data provided by radio-browser.info
-pin=Pin
-unpin=Unpin
-pinned=Pinned
+preferences.servers.selected=Selected server:
+preferences.servers.error=Error when getting servers:\n
+preferences.servers.notAvailable=No available servers right now. Click to Try again.
+preferences.servers.restartNeeded=Selected server will be applied after restart of the app.
+about.dataSource=Stations data provided by radio-browser.info
+pinned.pin=Pin
+pinned.unpin=Unpin
+pinned.title=Pinned
 verified=Station is verified
-directory=Directory
-directory.all.countries=Browse all countries
+directory.title=Directory
+directory.browseAll=Browse all countries
 directory.error=Countries can't be retrieved from the server.
+colors.default=App default
+colors.graphite=Graphite
+colors.red=Red
+colors.orange=Orange
+colors.yellow=Yellow
+colors.green=Green
+colors.blue=Blue
+colors.purple=Purple
+colors.pink=Pink
+about.appDescription=Internet Radio Directory
 
