--- a/src/main/resources/Messages_sk.properties
+++ b/src/main/resources/Messages_sk.properties
@@ -1,83 +1,74 @@
 ﻿# GLOBAL strings
 favourites=Obľúbené
 history=História
-topStations=Populárne
-trendingStations=V trendoch
+topStations=Najpočúvanejšie
+trendingStations=Trendy
 copy=Kopírovať
 show=Zobraziť
 exit=Ukončiť
-copy.stream.url=Kopírovať URL streamu
+copy.streamUrl=Kopírovať URL streamu
 copy.nowPlaying=Kopírovať názov skladby
 close=Zatvoriť
 cancel=Zrušiť
 save=Uložiť
 open=Otvoriť
-search=Hľadať
+search.prompt=Hľadať
 loading=Načítavam...
 countries=Prehliadať krajiny
 library=Knižnica
 station=stanica
 stations=staníc
 unknown=Neznáme
-connectionError=Pripojenie na server nie je možné.
-connectionErrorDesc=Prosím skontrolujte vaše pripojenie na internet a kliknite sem pre opakovanie akcie
+connectionError.title=Pripojenie na server nie je možné.
+connectionError.description=Prosím skontrolujte vaše pripojenie na internet a kliknite sem pre opakovanie akcie
 noResults=Neboli nájdené žiadne stanice
-searchingLibrary=Vyhľadávnie v zozname staníc
-searchingLibraryDesc=Začnite napísaním aspoň 3 znakov do poľa pre vyhľadávanie
+search.empty.title=Vyhľadávnie v zozname staníc
+search.empty.description=Začnite napísaním aspoň 3 znakov do poľa pre vyhľadávanie
 field.max.length=Pole je prílš dlhé
-field.min.length=Pole je príliš krátke
 field.invalid.length=Pole je prílíš dlhé alebo príliš krátke
 field.invalid.country=Toto nie je platný názov krajiny
 field.invalid.url=Toto nie je platná URL adresa
 player.streamingStopped=Prehrávanie zastavené
 player.streamingError=Chyba prehrávania
 player.streamError=Nie je možné otvoriť {0}. Otvore app.log pre viac informácií.
-player.noMetaData=Neznáma skladba
-player.vlc.missing=VLC Player nie je nainštalovaný!
+player.unknownTrack=Neznáma skladba
+player.vlc.missing.title=VLC Player nie je nainštalovaný!
 player.vlc.missing.description=Aplikácie bude využívať iný prehrávač. Pre najlepší zážitok \
   odporúčame nainštalovať prehrávač VLC na váš systém!
 menu.station.add=Nová stanica
-menu.station.favourite=Pridať do Obĺúbených
+menu.station.favourite=Pridať do Obľúbených
 menu.station.favouriteRemove=Odstrániť z Obľúbených
 menu.station.favourite.clear=Vymazať všetky obľúbené stanice...
 menu.station.vote=Hlasovať za stanicu
-menu.stream=Otvoriť URL streamu...
-menu.stream.title=Otvoriť Stream
-menu.stream.url=URL:
-menu.stream.stationName=Vlastný stream
-menu.stream.stationTag=Vlastný stream
+menu.openStream=Otvoriť URL streamu...
+openStream.title=Otvoriť Stream
+openStream.url=URL:
+openStream.stationName=Vlastný stream
 menu.file=_Súbor
-menu.station.info=Zobraziť informácie o stanici
 menu.help=_Pomoc
 menu.help.clearCache=Vymazať Cache obrázkov
 menu.help.stats=API Štatistiky
 menu.help.openWebsite=Navštíviť webstránku aplikácie
-menu.help.logs=Otvoriť adresár s logmi
-menu.help.loglevel=Zmeniť Log Level
-menu.help.loglevel.off=Vypnuté
-menu.help.loglevel.info=Info
-menu.help.loglevel.debug=Debug
-menu.history=_History
-menu.history.show=Show History
-menu.history.recent=Recently Listened
-menu.history.clear=Clear History...
-history.clear.confirm=Do you want to clear the history?
-history.clear.text=This operation will remove {0} items saved in your history and cannot be undone.
+menu.help.openLogs=Otvoriť adresár s logmi
+menu.help.log.title=Zmeniť Log Level
+menu.help.log.off=Vypnuté
+menu.help.log.info=Info
+menu.help.log.debug=Debug
 menu.preferences=Nastavenia...
-app.preferences=Nastavenia
-app.appearance=Vzhľad aplikácie
-app.useSystemColor=Použiť systémovú farbu:
-app.accentColor=Farebný akcent:
-app.darkMode=Tmavý mód
-app.trayIcon=Ikona zásobníka
+preferences.title=Nastavenia
+preferences.appearance=Vzhľad aplikácie
+preferences.accentColor.system=Použiť systémovú farbu:
+preferences.accentColor=Farebný akcent:
+preferences.theme.title=Tmavý mód
+app.trayIcon.title=Ikona zásobníka
 app.trayIcon.enable=Povoliť ikonu:
 menu.app.quit=Vypnúť
 menu.app.about=O aplikácii
 menu.app.attributions=Softvér tretej strany
-menu.app.server=Zmeniť API server
-menu.app.darkMode=Tmavý mód:
-menu.app.dark=Tmavá
-menu.app.light=Svetlá
+preferences.servers.title=Zmeniť API server
+preferences.theme.select=Tmavý mód:
+preferences.theme.dark=Tmavá
+preferences.theme.light=Svetlá
 menu.app.system=System
 menu.player.controls=_Prehrávanie
 menu.player.stop=Zastaviť
@@ -87,29 +78,29 @@ menu.player.animate=Animovaný názov skladby
 menu.favourites=_Obľúbené
 menu.favourites.show=Zobraziť obľúbené
 menu.favourites.all=Všetky obľúbené
-cache.clear.confirm=Naozaj chcete zmazať cache obrázkov?
+cache.clear.title=Naozaj chcete zmazať cache obrázkov?
 cache.clear.ok=Cache bola vymazaná.
 cache.clear.error=Nastala chyba pri mazaní cache obrázkov.
-cache.clear.text=Táto akcia uvoľní {0} MB uložených obrázkov. Táto akcia je nevratná.
+cache.clear.description=Táto akcia uvoľní {0} MB uložených obrázkov. Táto akcia je nevratná.
 vote.ok=Hlasovanie bolo úspešné!
 vote.error=Momentálne nie je možné hlasovať za túto stanicu! Skúste to znova neskôr
 macos.menu.window=_Okno
-database.clear.confirm=Chcete zmazať všetky Obľúbené stanice?
-database.clear.text=Táto akcia odstráni všetky Obľúbené stanice v zozname. Táto akcia je nevratná!
-Search=Výsledky vyhľadávania pre
+database.clear.title=Chcete zmazať všetky Obľúbené stanice?
+database.clear.description=Táto akcia odstráni všetky Obľúbené stanice v zozname. Táto akcia je nevratná!
+search.results=Výsledky vyhľadávania pre
 search.byName=Podľa mena
 search.byTag=Podľa tagu
 stats.statsUnavailable=Štatistiky momentálne nie sú k dispozícií
 stats.status=Status
-stats.software_version=API Verzia
+stats.softwareVersion=API Verzia
 stats.stations=Stanice
-stats.stations_broken=Nefunkčných staníc
+stats.stationsBroken=Nefunkčných staníc
 stats.tags=Tagy
 stats.title=API Štatistiky
 stats.countries=Krajiny
 stats.languages=Jazyky
-stats.clicks_last_hour=Klikov za poslednú hodinu
-stats.clicks_last_day=Klikov za posledný deň
+stats.clicksLastHour=Klikov za poslednú hodinu
+stats.clicksLastDay=Klikov za posledný deň
 add.title=Pridať novú stanicu
 add.name=Názov
 add.site=Webstránka
@@ -131,20 +122,30 @@ info.clickTrend=Popularita
 info.clickCount=Kliknutí
 info.tags=Tagy
 info.state=Štát
-info.visit.website=Navštívíť webstránku
+info.visitWebsite=Navštívíť webstránku
 attributions.title=Softvér tretej strany použitý v
 attributions.name=Názov
 attributions.version=Verzia
-servers.selected=Zvolený server:
-servers.error=Chyba pri získavaní serverov:\n
-servers.notAvailable=Momentálne nie je dostupný žiadny server. Klikni pre opakovanie akcie.
-servers.restartNeeded=Zvolený server bude aplikovaný po reštarte aplikácie.
-about.datasource=Zoznam staníc poskytuje radio-browser.info
-pin=Pripnúť
-unpin=Odopnúť
-pinned=Pripnuté krajiny
+preferences.servers.selected=Zvolený server:
+preferences.servers.error=Chyba pri získavaní serverov:\n
+preferences.servers.notAvailable=Momentálne nie je dostupný žiadny server. Klikni pre opakovanie akcie.
+preferences.servers.restartNeeded=Zvolený server bude aplikovaný po reštarte aplikácie.
+about.dataSource=Zoznam staníc poskytuje radio-browser.info
+pinned.pin=Pripnúť
+pinned.unpin=Odopnúť
+pinned.title=Pripnuté krajiny
 verified=Stanica je verifikovaná
-directory=Adresár
-directory.all.countries=Prehliadať krajiny
+directory.title=Adresár
+directory.browseAll=Prehliadať krajiny
 directory.error=Krajiny nebolo možné získať.
+colors.default=Predvolená farba
+colors.graphite=Grafitová
+colors.red=Červená
+colors.orange=Oranžová
+colors.yellow=Žltá
+colors.green=Zelená
+colors.blue=Modrá
+colors.purple=Fialová
+colors.pink=Ružová
+about.appDescription=Zoznam internetových rádio staníc
 
