DSL for platform specific context menus

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -75,6 +75,7 @@ menu.player.stop=Stop
 menu.player.start=Play
 menu.player.switch=Disable VLC Player
 menu.player.animate=Show Animated Track Name
+menu.player.toggle=Toggle player
 menu.favourites=_Favourites
 menu.favourites.show=Show Favourites
 menu.favourites.all=All Favourites
