--- a/src/main/resources/Messages_sk.properties
+++ b/src/main/resources/Messages_sk.properties
@@ -74,6 +74,7 @@ menu.player.controls=_Prehrávanie
 menu.player.stop=Zastaviť
 menu.player.start=Prehrávať
 menu.player.switch=Zakázať VLC Player
+menu.player.toggle=Prepnúť prehrávanie
 menu.player.animate=Animovaný názov skladby
 menu.favourites=_Obľúbené
 menu.favourites.show=Zobraziť obľúbené
