Add Playback history tab

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -124,6 +124,8 @@ info.clickCount=Clicks
 info.tags=Tags
 info.state=State
 info.visitWebsite=Visit website
+info.button.station=Station Info
+info.button.playlist=Playlist History
 attributions.title=Third Party software used by
 attributions.name=Name
 attributions.version=Version
