Update playlist history UI

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -151,4 +151,5 @@ colors.blue=Blue
 colors.purple=Purple
 colors.pink=Pink
 about.appDescription=Internet Radio Directory
+playlistHistory.empty=No playlist history is available!
 
