Update playback history UI and listview styles

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -152,4 +152,4 @@ colors.purple=Purple
 colors.pink=Pink
 about.appDescription=Internet Radio Directory
 playlistHistory.empty=No playlist history is available!
-
+playlistHistory.searchOnYouTube=Search on YouTube
