Added playlist history menu, added macOS dock menu, save verified status in db, fixed small UI issues

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1,5 +1,5 @@
 # GLOBAL strings
-favourites=Favourites
+favourites=My Favourites
 history=History
 topStations=Popular
 trendingStations=Trending
@@ -153,3 +153,4 @@ colors.pink=Pink
 about.appDescription=Internet Radio Directory
 playlistHistory.empty=No playlist history is available!
 playlistHistory.searchOnYouTube=Search on YouTube
+playlistHistory.play=Play “{0}”
