Add Verified library, fix loading of libraries, add missing translations

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -3,6 +3,7 @@ favourites=My Favourites
 history=History
 topStations=Popular
 trendingStations=Trending
+verifiedStations=Verified
 copy=Copy
 show=Show
 exit=Quit
