--- a/src/main/resources/Messages_sk.properties
+++ b/src/main/resources/Messages_sk.properties
@@ -149,4 +149,10 @@ colors.blue=Modrá
 colors.purple=Fialová
 colors.pink=Ružová
 about.appDescription=Zoznam internetových rádio staníc
+info.button.playlist=História prehrávania
+info.button.station=Informácie o stanici
+playlistHistory.empty=História prehrávania je prázdna!
+playlistHistory.play=Prehrať
+playlistHistory.searchOnYouTube=Vyhľadať na YouTube
+verifiedStations=Overené stanice
 
