Add sleep timer, try to fix memory issues when loading image

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -155,3 +155,8 @@ about.appDescription=Internet Radio Directory
 playlistHistory.empty=No playlist history is available!
 playlistHistory.searchOnYouTube=Search on YouTube
 playlistHistory.play=Play “{0}”
+player.sleepTimerFinished=Sleep Timer has finished.
+sleepTimer.menu=Sleep timer
+sleepTimer.disabled=Disabled
+sleepTimer.30min=30 minutes
+sleepTimer.1hr=1 hour
