--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -152,7 +152,7 @@ colors.blue=Blue
 colors.purple=Purple
 colors.pink=Pink
 about.appDescription=Internet Radio Directory
-playlistHistory.empty=No playlist history is available!
+playlistHistory.empty=No playlist history is available
 playlistHistory.searchOnYouTube=Search on YouTube
 playlistHistory.play=Play “{0}”
 player.sleepTimerFinished=Sleep Timer has finished.
